--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #ee4d2d;
+  --primary-color-ligth: #ff7337;
   --sm-font-size: 12px;
   --md-font-size: 14px;
   --lg-font-size: 20px;
