--- a/src/commons/components/header/Header.module.css
+++ b/src/commons/components/header/Header.module.css
@@ -1,4 +1,4 @@
-@import '../../../index.css';
+/* @import '../../../index.css'; */
 
 .btn-search-bar {
   background-color: var(--primary-color) !important;
