--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+
+.image {
+  width: 100%;
+  height: 100%;
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
