add banner image.

--- a/src/features/home/Home.module.css
+++ b/src/features/home/Home.module.css
@@ -91,3 +91,10 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+/* main */
+
+/* banner-image */
+.banner-image {
+  margin-top: 20px;
+}
