--- a/src/commons/components/footer/Footer.module.css
+++ b/src/commons/components/footer/Footer.module.css
@@ -3,6 +3,8 @@
   width: 100%;
   /* min-height: ; */
   background-color: #fbfbfb;
+
+  border-top: 4px solid var(--primary-color);
 }
 
 .footer-section {
