--- a/src/features/home/Home.module.css
+++ b/src/features/home/Home.module.css
@@ -59,7 +59,7 @@
 
 .banner-item {
   /* border: 1px solid #333; */
-  width: 100px;
+  /* width: 100px; */
   color:#333;
   font-size: 13px;
   line-height: 24px;
@@ -96,5 +96,34 @@
 
 /* banner-image */
 .banner-image {
+  width: 100%;
   margin-top: 20px;
 }
+
+.banner-image img {
+  width: 100%;
+}
+
+.content-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+  color: var(--primary-color);
+  font-size: 16px;
+  font-weight: 500;
+
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+
+  border-bottom: 4px solid var(--primary-color);
+  margin-bottom: 8px;
+}
+
+/* .content-header::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--primary-color);
+} */
