--- a/src/commons/components/product/ProductCard/ProductCard.module.css
+++ b/src/commons/components/product/ProductCard/ProductCard.module.css
@@ -71,6 +71,10 @@
   background-color: rgba(255,212,36,.9);
 }
 
+.tag-discount.hidden {
+  visibility: hidden;
+}
+
 
 /* product content */
 .product-content {
@@ -87,7 +91,7 @@
 
 .product-content .product-description {
   /* border: 1px solid #333; */
-  min-height: 1.75rem;
+  min-height: 37.703px;
   color: #333;
   
   display: -webkit-box;
