--- a/src/features/login/Login.module.css
+++ b/src/features/login/Login.module.css
@@ -1,3 +1,40 @@
+.login-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 12px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .login-header {
+    flex-direction: row;
+  }
+}
+
+.login-header .header-left {
+  /* border: 1px solid #333; */
+  display: flex;
+  align-items: baseline;
+}
+
+.login-header .header-left .header-image {
+  width: 160px;
+  margin: 0;
+  margin-right: 16px;
+}
+
+.login-header .header-left h2 {
+  margin: 0;
+  font-weight: 400;
+  height: 100%;
+}
+
+.login-header .header-right a {
+  color: var(--primary-color);
+}
+
 .main {
   display: block;
   background-color: var(--primary-color);
@@ -46,6 +83,22 @@
   padding: 22px 30px;
 }
 
+.login-content__form--message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+  margin-bottom: 24px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 0, 0, 0.3);
+  background-color: rgba(255, 0, 0, 0.05);
+}
+
+.login-content__form--message .icon {
+  color: red;
+  margin-right: 8px;
+}
+
 .login-content__form input {
   border: 1px solid rgba(0, 0, 0, 0.3);
   height: 40px;
@@ -54,6 +107,7 @@
   text-indent: 16px;
   background-color: #fff;
   outline: none;
+  border-radius: 4px;
 }
 
 .login-content__form input:focus {
