--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,16 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .flex {
+    flex-direction: row;
+    align-items: center;
+  }
+}
