--- a/src/features/product/Product.module.css
+++ b/src/features/product/Product.module.css
@@ -18,7 +18,7 @@
 
 .product-content {
   flex: 3;
-  border: 1px solid #333;
+  /* border: 1px solid #333; */
   padding: 8px 16px;
 }
 
@@ -278,4 +278,49 @@
     align-items: center;
     font-size: var(--md-font-size);
   }
+}
+
+.product-actions {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .product-actions {
+    flex-direction: row;
+  }
+}
+
+.btn {
+  border: 1px solid #333;
+  padding: 12px 16px;
+  font-size: 16px;
+  margin-bottom: 8px;
+  text-align: center;
+  margin-top: 8px;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .btn {
+    margin-right: 8px;
+  }
+}
+
+.btn.btn-add-cart {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  background-color: #FEF5F1;
+}
+
+.btn.btn-buy-now {
+  color: #fff;
+  border: none;
+  background-color: var(--primary-color);
+}
+
+.btn.btn-add-cart:hover,
+.btn.btn-buy-now:hover {
+  opacity: 0.8;
 }
